Updated ipynb file

--- a/airlines.ipynb
+++ b/airlines.ipynb
@@ -20,16 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd                  # Pandas\n",
-    "import numpy as np                   # Numpy\n",
+    "import pandas as pd                  # Pandas                 # Numpy\n",
     "from matplotlib import pyplot as plt # Matplotlib\n",
     "\n",
     "# Package to implement Decision Tree Model\n",
-    "import sklearn\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# Classification metrics\n",
